--- a/Front-end/src/app/theme/sidebar-notice/sidebar-notice.component.html
+++ b/Front-end/src/app/theme/sidebar-notice/sidebar-notice.component.html
@@ -1,4 +1,3 @@
 <mat-tab-group>
-  <mat-tab label="Today"> Content 1 </mat-tab>
-  <mat-tab label="Notifications"> Content 2 </mat-tab>
+  <mat-tab label="Today"> 退出登录 </mat-tab>
 </mat-tab-group>
